Navbar überarbeitet und angepasst

--- a/CarpoolingApp/Seiten/UserPage.html
+++ b/CarpoolingApp/Seiten/UserPage.html
@@ -128,7 +128,7 @@
 
     <!-- Navigationssymbole am unteren Rand -->
     <div class="footer-navigation">
-        <a href="Home.html" class="nav-item">
+        <a href="UserPage.html" class="nav-item">
             <img src="../Ressourcen/Images/HomeIcon.png" alt="Home" class="nav-icon">
         </a>
         <a href="Overview.html" class="nav-item">
