--- a/CarpoolingApp/Seiten/Overview.html
+++ b/CarpoolingApp/Seiten/Overview.html
@@ -105,7 +105,7 @@
 
     <!-- Navigationsleiste unten -->
     <div class="footer-navigation">
-        <a href="Home.html" class="nav-item">
+        <a href="UserPage.html" class="nav-item">
             <img src="../Ressourcen/Images/HomeIcon.png" alt="Home" class="nav-icon">
         </a>
         <a href="Overview.html" class="nav-item">
