Vorläufige DB Anbindung testen und vergleichen Testsystem Halbmayr

--- a/CarpoolingApp/Seiten/Register.html
+++ b/CarpoolingApp/Seiten/Register.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Konto erstellen</title>
     <link rel="stylesheet" href="../Ressourcen/Stylesheet.css"> <!-- Hier den korrekten Pfad zur CSS-Datei angeben -->
+    <script src="../Ressourcen/JavaScript.js"></script> 
 </head>
-<body>
+<body onload="getAllPersons()">
 
 <div class="register-container">
     <h1>Konto erstellen</h1>
